ingress-Haproxy/Manifestfile/grafana-svc.yaml


apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: kube-prometheus-stack
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 10.2.2
    helm.sh/chart: grafana-7.0.19
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
    pod-template-hash: 9d46b9bcd
  ports:
  - name: http-web
    port: 8082
    protocol: TCP
    targetPort: 3000
